# image-bmp-processor

./: CMakeLists.txt  README.md  image_processor.cpp  test.cpp
BMPLoader/: BMPLoader.cpp  BMPLoader.h
Filters/: Filter.cpp  Filter.h  MatrixFilter.cpp  MatrixFilter.h
Filters/InheritFilters/: CropFilter.cpp  CropFilter.h  EdgeFilter.cpp  EdgeFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  MotionBlurFilter.cpp  MotionBlurFilter.h  NegativeFilter.cpp  NegativeFilter.h  PixelFilter.cpp  PixelFilter.h  SharpFilter.cpp  SharpFilter.h  SmoothEdgeFilter.cpp  SmoothEdgeFilter.h  ThirdDimFilter.cpp  ThirdDimFilter.h
Image/: Image.cpp  Image.h
Pixel/: Pixel.h
Validator/: Validator.cpp  Validator.h
